appId: com.drvn.rmms.store
---
# crawl · mnt-log
- launchApp:
    clearState: true
    clearKeychain: true
- extendedWaitUntil:
    visible:
      id: "sc-home"
    timeout: 15000
- tapOn:
    id: "btn-home-login"
    optional: true
- extendedWaitUntil:
    visible:
      id: "f-user"
    timeout: 15000
- tapOn:
    id: "f-user"
- eraseText
- inputText: "linm-soft"
- tapOn:
    text: "QUẢN LÝ BẢO TRÌ ĐƯỜNG BỘ"
    optional: true
- tapOn:
    text: "RMMS"
    optional: true
- tapOn:
    id: "f-pass"
- eraseText
- inputText: "Linm@2026"
- tapOn:
    text: "QUẢN LÝ BẢO TRÌ ĐƯỜNG BỘ"
    optional: true
- tapOn:
    text: "RMMS"
    optional: true
- tapOn:
    id: "btn-login"
    optional: true
- tapOn:
    text: "Đăng nhập"
    optional: true
- tapOn:
    text: "Not Now"
    optional: true
- extendedWaitUntil:
    visible:
      id: "home-who"
    timeout: 40000

- tapOn:
    id: "tab-work"
    optional: true
- tapOn:
    text: "Công việc"
    optional: true
- tapOn:
    point: "70%,96%"
    optional: true
- extendedWaitUntil:
    visible:
      id: "sc-mnt-list"
    timeout: 20000
- tapOn:
    id: "btn-mnt-log-demo-wo-2"
- extendedWaitUntil:
    visible:
      id: "sc-mnt-log"
    timeout: 20000
